--- a/app/Resources/views/overlay.html.twig
+++ b/app/Resources/views/overlay.html.twig
@@ -26,7 +26,7 @@
             </div>
             <div class="signup-form">
                 <div class="message">If you want to post applications you need to register</div>
-                <a class="button grey signup" href="{{ path('pp_user_register') }}">Sign up</a>
+                <a target="_self" class="button grey signup" href="{{ path('pp_user_register') }}">Sign up</a>
             </div>
         </div>
         <div class="terms">
