--- a/src/AppBundle/Resources/public/css/global.sass
+++ b/src/AppBundle/Resources/public/css/global.sass
@@ -12,7 +12,7 @@ a
 	transition-duration: none
 
 	&:hover, &:focus
-		color: $main-color-hover
+		text-decoration: underline
 
 	&:focus
 		outline-color: $main-color
