--- a/src/PP/RequestBundle/Resources/public/css/style.sass
+++ b/src/PP/RequestBundle/Resources/public/css/style.sass
@@ -26,6 +26,7 @@ section.main
 
 				&:hover
 					color: #444
+					text-decoration: none
 
 				&.selected, &.open
 					color: $main-color
@@ -74,6 +75,12 @@ section.main
 					margin: 0 0 10px
 					font-size: 30px
 					float: left
+					line-height: 30px
+
+					a
+						&:hover
+							color: $main-color-hover
+							text-decoration: none
 
 				.request-content
 					width: 100%
