--- a/src/PP/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/PP/UserBundle/Resources/views/Security/login.html.twig
@@ -1,4 +1,30 @@
-
+<h3 class="overlay-title">Prestapic</h3>
+<p class="ind">Sign in to Prestapic</p>
+<div class="overlay-actions">
+    <div class="top-form">
+        If you want to post requests or help people you need to connect
+    </div>
+    <div class="signin-form">
+        <form action="{{ path("fos_user_security_check") }}" method="post">
+            <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
+            <input type="text" class="username" placeholder="Your email" id="username" name="_username" value="{{ last_username }}" required="required" />
+            <input type="password" class="password" placeholder="Your password" id="password" name="_password" required="required" />
+            <div class="signin-left">
+                <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
+                <label for="remember_me">Remember me</label>
+            </div>
+            <div class="signin-right">
+                <button type="submit" class="button red signin" id="_submit" name="_submit">Sign in</button>
+            </div>
+            <div class="forgot">
+                <a href="{{ path('pp_user_resetting_request') }}">Forgot your password?</a>
+            </div>
+        </form>
+    </div>
+    <div class="signup-form">
+        Not member yet? <a href="{{ path('pp_user_register') }}">Sign up</a>
+    </div>
+</div>
 
 
 {% if error %}
@@ -10,20 +36,4 @@
     </script>
     <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
 {% endif %}
-
-<form action="{{ path("fos_user_security_check") }}" method="post">
-    <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
-
-   
-    <input type="text" class="username" placeholder="Your email or username" id="username" name="_username" value="{{ last_username }}" required="required" />
-
-    
-    <input type="password" class="password" placeholder="Your password" id="password" name="_password" required="required" />
-    
-    <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
-    <!--<label for="remember_me">Remenber me</label> -->
-    
-    <button type="submit" class="button red signin" id="_submit" name="_submit">Sign in</button>
-    <a class="forgot" href="{{ path('pp_user_resetting_request') }}">Forgot your password?</a>
-</form>
 
