--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -63,11 +63,33 @@
             </section>                                        
         </div>
                         
-        {% include "::overlay.html.twig" %}                                              
+                                                    
 
         <footer>         
         </footer>
     </div>    
+    
+    <div id="signApp">
+        {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+        {% else %}
+        <base href=" " />
+        <form action="{{ path("pp_user_api_register_get_register_form") }}" name="pp_user_api_register_get_register_form">
+        </form>
+        <section ng-controller="signController as sign" class="overlay sign" id="signInUpOver" style="display:none;" >
+            <button class="button-close" id="signInUpOverClose" >×</button>
+            <div class="overlay-content">                
+                {{ render(controller("FOSUserBundle:Security:login"))}}                
+                <div class="terms">
+                    <p>
+                        By clicking Sign Up, you agree to our <a href="#">Terms</a> and that you have read our <a href="#">Data Policy</a>, including our <a href="#">Cookie Use</a>.
+                    </p>
+                </div>
+            </div>
+        </section>
+        {% endif %}
+    </div>
+    
+    {% include "::overlay.html.twig" %}
     
     {% block reportPopup %}
         {{ render(controller("PPReportBundle:Report:reportPopup")) }}
@@ -79,32 +101,32 @@
         {{ render(controller("PPPropositionBundle:Proposition:propositionPopup")) }}        
     {% endblock %}
         
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
-    <script src="https://code.angularjs.org/1.4.7/angular.min.js" type="text/javascript"></script>
-    <script src="https://code.angularjs.org/1.4.7/angular-route.js" type="text/javascript"></script>
-    <script src="https://code.angularjs.org/1.4.7/angular-sanitize.min.js"    type="text/javascript"></script>
-    <script type="text/javascript" src="http://alexandrejolly.com:3000//client.js"></script>                     
     
-    {% javascripts filter='?yui_js' '@PPPropositionBundle/Resources/public/js/popupController.js' %}   
+    <script type="text/javascript" src="http://alexandrejolly.com:3000//client.js"></script>                         
+    
+    {% javascripts filter='?yui_js''@AppBundle/Resources/public/js/jquery.min.js'
+                                   '@AppBundle/Resources/public/js/angular.min.js'
+                                   '@AppBundle/Resources/public/js/angular-route.min.js'
+                                   '@AppBundle/Resources/public/js/angular-sanitize.min.js'                                                                                                        
+    %}   
         <script type="text/javascript" src="{{ asset_url }}"></script>
-    {% endjavascripts %}
+    {% endjavascripts %}       
     
     {% block js %}                                         
     {% endblock %}
 
     {% javascripts filter='?yui_js''@PPRequestBundle/Resources/public/js/global.js'
+                                   '@AppBundle/Resources/public/js/signApp.js'
                                    '@PPRequestBundle/Resources/public/js/tabindex.js' 
                                    '@PPHeaderBundle/Resources/public/js/headerApp.js'
                                    '@PPRequestBundle/Resources/public/js/lazyLoadDirective.js' 
                                    '@PPMessageBundle/Resources/public/js/messageApp.js'
                                    '@PPMessageBundle/Resources/public/js/elastic.js'
+                                   '@PPPropositionBundle/Resources/public/js/popupController.js'
                                    '@PPReportBundle/Resources/public/js/reportApp.js'                                                                      
     %}   
         <script type="text/javascript" src="{{ asset_url }}"></script>
-    {% endjavascripts %}
-    
-    
-   
+    {% endjavascripts %}           
 
 </body>
 </html>
