--- a/src/AppBundle/Resources/public/css/overlay.sass
+++ b/src/AppBundle/Resources/public/css/overlay.sass
@@ -60,8 +60,14 @@ section.overlay
 			border: 1px solid rgba(0,0,0,.1)
 			border-radius: 3px
 			width: 100%
+			height: 323px
 			display: block
 			overflow: hidden
+			@include vendor-prefix(transition, height .5s ease)
+
+			&.onsignup
+				height: 376px
+				@include vendor-prefix(transition, height .5s ease)
 
 			.top-form
 				font-size: 20px
@@ -88,7 +94,7 @@ section.overlay
 						&:focus
 							border-bottom: 1px solid $main-color
 
-					input[type="text"], input[type="password"], input[type="mail"]
+					input[type="text"], input[type="password"], input[type="email"]
 						width: 100%
 
 					.signin-left, .signin-right
@@ -117,7 +123,7 @@ section.overlay
 						height: auto
 						color: #BBB
 						font-size: 12px
-						padding: 0 15px
+						padding: 0 15px 20px
 
 						a 
 							&:hover
@@ -130,7 +136,6 @@ section.overlay
 				display: block
 				text-align: center
 				border-top: 1px solid rgba(0,0,0,.1)
-				margin-top: 20px
 				font-size: 20px
 
 				a
