--- a/src/AppBundle/Resources/public/css/avatar.sass
+++ b/src/AppBundle/Resources/public/css/avatar.sass
@@ -1,12 +1,12 @@
 a.avatar, .avatar
-	background: rgba(0,0,0,.1)
+	background: white
 	display: inline-block
 	border-radius: 50%
 	overflow: hidden
 
-	&:hover
-		background: rgba(0,0,0,.15)
-
 	img
 		width: 100%
 		color: rgba(255,255,255,.5)
+
+a.avatar:focus
+	box-shadow: 0 0 0 1px #fff, 0 0 0 3px rgba(196, 75, 71, 0.5)
