--- a/src/AppBundle/Resources/public/css/tag.sass
+++ b/src/AppBundle/Resources/public/css/tag.sass
@@ -13,7 +13,7 @@
 		&:last-child
 			margin-right: 0
 
-		&:hover
-			background: rgba(0, 0, 0, 0.25)
+		&:hover, &:focus
+			border: 1px solid rgba(0, 0, 0, 0.25)
 			color: rgba(0, 0, 0, 0.5)
 			text-decoration: none
