--- a/src/AppBundle/Resources/public/css/upvote.sass
+++ b/src/AppBundle/Resources/public/css/upvote.sass
@@ -1,18 +1,22 @@
 // UPVOTE
 a.count-vote
 	font-size: 30px
+	line-height: 30px
 	font-weight: normal
 	color: rgba(0,0,0,.25)
 	display: block
 	position: relative
 	text-align: right
 
-	&:hover
+	&:hover, &:focus
 		color: #00D084
 		text-decoration: none
 
 	&.voted
 		color: #00D084
+
+		&:focus
+			color: rgba(0,181,115,1)
 
 	&.blocked
 		color: rgba(0,0,0,.1)
@@ -21,7 +25,7 @@ a.count-vote
 		display: block
 		width: 25px
 		height: 25px
-		padding: 10px 0 10px 10px
+		padding: 5px 0 2px 10px
 		text-align: center
 		font-family: "pp-font"
 		speak: none
