--- a/src/PP/MessageBundle/Resources/public/css/style.sass
+++ b/src/PP/MessageBundle/Resources/public/css/style.sass
@@ -171,6 +171,11 @@ section.overlay-messages
 						border-bottom: 1px solid rgba(0, 0, 0, 0.1)
 
 					ul
+						overflow-y: auto
+						display: block
+						width: 300px
+						height: 501px
+
 						li.search-box-user
 							border-bottom: 1px solid rgba(0, 0, 0, 0.1)
 
