--- a/src/PP/UserBundle/Resources/public/css/style.sass
+++ b/src/PP/UserBundle/Resources/public/css/style.sass
@@ -286,6 +286,12 @@ section.profile
 						content: $icon-dropdown
 						font-size: 16px
 
+					&:hover, &:focus
+						box-shadow: none
+
+						&:before
+							color: white
+
 				ul.dropdown-choices
 					padding: 0px 0
 					text-align: left
