--- a/src/PP/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/PP/UserBundle/Resources/views/Security/login.html.twig
@@ -7,8 +7,8 @@
     <div id="signInContent">    
         <div class="signin-form">
             <form action="{{ path("fos_user_security_check") }}" method="post">
-                <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
-                <input type="text" class="username" placeholder="Your email" id="username" name="_username" value="{{ last_username }}" required="required" />
+                <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />                
+                <input type="text" class="username" placeholder="Your email or username" id="username" name="_username" value="{{ last_username }}" required="required" />
                 <input type="password" class="password" placeholder="Your password" id="password" name="_password" required="required" />
                 <div class="signin-left">
                     <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
@@ -18,7 +18,7 @@
                     <button type="submit" class="button red" id="_submit" name="_submit">Sign in</button>
                 </div>
                 <div class="forgot">
-                    <a href="{{ path('pp_user_resetting_request') }}">Forgot your password?</a>
+                    <a target="_self" href="{{ path('pp_user_resetting_request') }}">Forgot your password?</a>
                 </div>
             </form>
         </div>    
