fix proposition timeout + proposition submit

--- a/src/PP/RequestBundle/Resources/views/Request/view.html.twig
+++ b/src/PP/RequestBundle/Resources/views/Request/view.html.twig
@@ -158,7 +158,7 @@
                     </div>
                 </div>
                 <span>By clicking « upload photo » you accept our <a href="">terms</a> again.</span>
-                <button class="button" type="submit">Upload image</button>
+                <button ng-click="upload.submitForm()" class="button" type="submit">Upload image</button>
                 {{ form_end(propositionForm) }}
             </article>
         {% endif %}    
