--- a/src/PP/UserBundle/Resources/views/Search/userPattern.html.twig
+++ b/src/PP/UserBundle/Resources/views/Search/userPattern.html.twig
@@ -20,7 +20,7 @@
 			</div>
 			<div class="screenname">
 				<a href="{{ path('pp_user_profile', {'slug': user.slug}) }}" target="_self">
-					@{{ user.name }}
+					@{{ user.username }}
 				</a>
 			</div>
 		</div>
