--- a/src/AppBundle/Resources/public/css/overlay.sass
+++ b/src/AppBundle/Resources/public/css/overlay.sass
@@ -62,7 +62,6 @@ section.overlay
 			width: 100%
 			height: 323px
 			display: block
-			overflow: hidden
 			@include vendor-prefix(transition, height .5s ease)
 
 			&.onsignup
@@ -80,7 +79,6 @@ section.overlay
 			.signin-form
 				width: 100%
 				display: block
-				overflow: hidden
 
 				form
 					input
@@ -96,6 +94,72 @@ section.overlay
 
 					input[type="text"], input[type="password"], input[type="email"]
 						width: 100%
+
+					.signin-username, .signin-email, .signin-pwd
+						position: relative
+
+						.icon-container
+							display: block
+							position: absolute
+							right: 20px
+							top: 15px
+							width: auto
+							height: 13px
+							font-size: 12px
+
+							span
+								display: none
+
+							.sidepop
+								display: block
+								width: 225px
+								height: auto
+								min-height: 22px
+								background: rgba(0,0,0,.5)
+								position: absolute
+								color: rgba(255,255,255,.33)
+								top: 50%
+								left: -190px
+								padding: 5px 10px
+								@include vendor-prefix(transform, translateY(-50%))
+								border-radius: 0 3px 3px 
+								z-index: -1
+								@include vendor-prefix(transition, left .5s ease)
+
+								span
+									display: block
+
+									a
+										color: rgba(255,255,255,.5)
+										text-decoration: underline
+
+										&:hover
+											color: rgba(255,255,255,.75)
+
+							&:before
+								font-family: "pp-font"
+								width: auto
+								height: 13px
+								font-size: 13px
+								line-height: 13px
+								font-weight: normal
+
+							&.success
+								color: #ccc
+
+								&:before
+									content: $icon-checked
+
+							&.danger
+								color: #F23F2D
+
+								&:before
+									content: $icon-checked
+
+								.sidepop
+									left: 38px
+									@include vendor-prefix(transition, left .5s ease)
+
 
 					.signin-left, .signin-right
 						width: 50%
@@ -137,6 +201,7 @@ section.overlay
 				text-align: center
 				border-top: 1px solid rgba(0,0,0,.1)
 				font-size: 20px
+				float: left
 
 				a
 					&:hover
