--- a/src/PP/UserBundle/Resources/views/Registration/register_content.html.twig
+++ b/src/PP/UserBundle/Resources/views/Registration/register_content.html.twig
@@ -4,20 +4,59 @@
     <form action="{{ path("pp_user_api_get_email_exist") }}" name="pp_user_api_get_email_exist_form">
     </form>
     <form  action="{{ path('pp_user_register') }}" {{ form_enctype(form) }} method="POST" class="fos_user_registration_register">
-        <div class="signin-rigth">
+        <div class="signin-username">
             {{ form_errors(form.username) }}            
             {{ form_widget(form.username, {'attr': {'class': 'username', 'placeholder': 'Username', 'ng-change':'sign.usernameTyping()', 'ng-model':'username'}}) }}
-
+            <div class="icon-container success">
+                <span>Success</span>
+                <div class="sidepop">
+                    <span>
+                        Username has already been taken.
+                    </span>
+                </div>
+            </div>
+        </div>
+        <div class="signin-email">
             {{ form_errors(form.email) }}
             {{ form_widget(form.email, {'attr': {'class': 'username', 'placeholder': 'Email', 'ng-change':'sign.emailTyping()', 'ng-model':'email'}}) }}
-
+            <div class="icon-container danger">
+                <span>Danger</span>
+                <div class="sidepop">
+                    <span>
+                        This email is already registered.<br/>
+                        Want to <a href="">login</a> or <a href="">recover your password</a>?
+                    </span>
+                </div>
+            </div>
+        </div>
+        <div class="signin-pwds">
             {%  for passwordField in form.plainPassword %}
                 {%  if loop.index == 1 %}
+                <div class="signin-pwd">
                     {{ form_errors(passwordField) }}
                     {{ form_widget(passwordField, {'attr': {'class': 'password', 'placeholder': 'Password', 'ng-model':'firstPassword'}}) }}
+                    <div class="icon-container">
+                        <span>Danger</span>
+                        <div class="sidepop">
+                            <span>
+                                Your password must be at least 6 characters.
+                            </span>
+                        </div>
+                    </div>
+                </div>
                 {% else %}
+                <div class="signin-pwd">
                     {{ form_errors(passwordField) }}
                     {{ form_widget(passwordField, {'attr': {'class': 'password', 'placeholder': 'Repeat password', 'ng-model':'secondPassword'}}) }}
+                    <div class="icon-container">
+                        <span>Danger</span>
+                        <div class="sidepop">
+                            <span>
+                                The password does not match.
+                            </span>
+                        </div>
+                    </div>
+                </div>
                 {% endif %}
             {% endfor %}
 
