--- a/src/PP/HeaderBundle/Resources/public/css/style.sass
+++ b/src/PP/HeaderBundle/Resources/public/css/style.sass
@@ -537,13 +537,17 @@ header
 							color: #444
 							font-size: 14px
 							padding: 15px 15px
-							border-bottom: 1px solid #eee
+							border-bottom: 1px solid rgba(0,0,0,.1)
 							position: relative
+
+							&:last-child
+								border-bottom: none
 
 							&:hover
 								background: rgba(0, 0, 0, .05)
 
 							.avatar
+								background: white
 								width: 48px
 								height: 48px
 								overflow: hidden
@@ -553,8 +557,8 @@ header
 								border: 1px solid white
 
 								img
-									width: 48px
-									height: 48px
+									width: 100%
+									height: 100%
 
 							.desc
 								width: 203px
@@ -591,10 +595,10 @@ header
 
 					&.more-notif
 						position: absolute
-						bottom: 2px
+						bottom: 0
 						height: 38px
 						background: white
-						border-top: 1px solid #eee
+						border-top: 1px solid rgba(0,0,0,.1)
 
 						&:before
 							content: ''
@@ -896,8 +900,15 @@ header
 							a
 								color: rgba(0,0,0,.5)
 
+								.avatar
+									background: rgba(255,255,255,.25)
+									border: 1px solid rgba(255,255,255,.25)
+
 								&:hover
 									background: rgba(0,0,0,.1)
+
+								span.dot
+									box-shadow-color: rgba(255,255,255,.25)
 
 						&.username
 							a
@@ -917,3 +928,4 @@ header
 
 						&.more-notif
 							background: rgba(255,255,255,.75)
+							border-top: 1px solid rgba(255,255,255,.25)
